--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 ob_li.slice(-1)[0].ruijido = ruijido;
 
                 // add it to the stage
-                app.stage.addChild(fish); //魚とテキストをcanvasに追加
+                app.stage.addChild(ob_li.slice(-1)[0]); //魚とテキストをcanvasに追加
                 app.stage.addChild(ob_li.slice(-1)[0].text);
 
                 return ob_li
