--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
 
             }
 
+            console.log(object_list)
+
             let dragTarget = null;
             let Target_pos = null;
             let description_flag = true;
