--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
                             continue
                         }
                         object_list[i].alpha = 0.3
+                        object_list[i].text.alpha = 0
                     }
                 }
             }
@@ -281,6 +282,7 @@
                             continue
                         }
                         object_list[i].alpha = 1
+                        object_list[i].text.alpha = 1
                     }
                 }
             }
