--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@
                 return result;
             }
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/jquery.ripples-min.js"></script>
 </body>
 
 </html>
