--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                             "「光」ミュージックビデオ公開！"]
 
             // create a texture from an image path
-            const kujira = PIXI.Texture.from('./images/shinkai_makkoukujira.png'); //画像を読み込む。
-            const kobanzame = PIXI.Texture.from('./images/fish_same_kobanzame.png');
-            const sacabam = PIXI.Texture.from('./images/kodai_sacabambaspis.png');
+            const kujira = PIXI.Texture.from('./images/animal_shachi_killer_whale.png'); //画像を読み込む。
+            const kobanzame = PIXI.Texture.from('./images/shinkai_chouchinankou.png');
+            const sacabam = PIXI.Texture.from('./images/nettaigyo_kumanomi2.png');
             const mijinko = PIXI.Texture.from('./images/mushi_mijinko.png');
-            const maguro = PIXI.Texture.from('./images/fish_maguro.png');
+            const maguro = PIXI.Texture.from('./images/fish_sakana_tai.png');
 
             var preData = {};
             try{
