--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
                 // make it a bit bigger, so it's easier to grab
                 ob_li.slice(-1)[0].scale.set(scale); //大きさを指定
                 ob_li.slice(-1)[0].text.anchor.set(0.5, 0.5); //魚の文字の場所を計算、指定
-		ob_li.slice(-1)[0].text.y = 10
 
                 // setup events for mouse + touch using
                 // the pointer events
@@ -185,7 +184,7 @@
                 //ob_li.slice(-1)[0].alpha = (Math.sin(10 * ob_li.slice(-1)[0].x / app.screen.width / Math.PI) + Math.sin(10 * ob_li.slice(-1)[0].y / app.screen.height / Math.PI)) / 2;
                 ob_li.slice(-1)[0].alpha = 1;
                 ob_li.slice(-1)[0].text.x = x;
-                ob_li.slice(-1)[0].text.y = y;
+                ob_li.slice(-1)[0].text.y = y - 100;
                 ob_li.slice(-1)[0].name = name;
                 ob_li.slice(-1)[0].url = url;
                 ob_li.slice(-1)[0].hash = hash;
