--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 //ob_li.slice(-1)[0].alpha = (Math.sin(10 * ob_li.slice(-1)[0].x / app.screen.width / Math.PI) + Math.sin(10 * ob_li.slice(-1)[0].y / app.screen.height / Math.PI)) / 2;
                 ob_li.slice(-1)[0].alpha = 1;
                 ob_li.slice(-1)[0].text.x = x;
-                ob_li.slice(-1)[0].text.y = y - 100;
+                ob_li.slice(-1)[0].text.y = y;
                 ob_li.slice(-1)[0].name = name;
                 ob_li.slice(-1)[0].url = url;
                 ob_li.slice(-1)[0].hash = hash;
