--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             }
 	    app.ticker.add(function(delta)　{
 		for(let i=0; i<object_list.length; i++) {
-                    object_list[i].rotation += 0.05 * delta;
+                    object_list[i].rotation = 0.5;
                 }
 	    });
             setCookie(uid["UID"], data);
