--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	    app.ticker.add(function(delta)　{
 		for(let i=0; i<object_list.length; i++) {
 		    if (object_list[i].rotation == (3*3.14)/4) {
-			    object_list[i].rotation = 3.14/4;
+			    object_list[i].rotation = (3.14*5)/4;
 		    } else {
 			    object_list[i].rotation = (3*3.14)/4;
 		    }
