--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                     texture = mijinko;
                     size = 0.2;
                 }
-		var position_w = 10;
-		var position_h=50;
-		var f=0;
+		let position_w = 10;
+		let position_h=50;
+		let f=0;
                 var object_list = createFish( //魚を作成する関数を呼び出し
                     //Math.floor(Math.random() * (0.9 * app.screen.width - 0.1 * app.screen.width)) + 0.1 * app.screen.width, //場所はランダム
                     //Math.floor(Math.random() * (0.7 * app.screen.height - 0.1 * app.screen.height)) + 0.1 * app.screen.height,
