--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
             console.log(data);
 
             var object_list = [];
+	    var position_w=50;
+	    var position_h=100;
+	    var f=0;
+		
             for (let i = 0; i < data.length; i++) { //受け取ったデータでスプライトを作成
                 let texture = null;
                 let size = 0.5;
@@ -130,12 +134,13 @@
                     texture = mijinko;
                     size = 0.2;
                 }
+		
 
                 var object_list = createFish( //魚を作成する関数を呼び出し
-                    Math.floor(Math.random() * (0.9 * app.screen.width - 0.1 * app.screen.width)) + 0.1 * app.screen.width, //場所はランダム
-                    Math.floor(Math.random() * (0.7 * app.screen.height - 0.1 * app.screen.height)) + 0.1 * app.screen.height,
-		    //Math.floor(position_w * (0.9 * app.screen.width - 0.1 * app.screen.width)) + 0.1 * app.screen.width, //場所はランダム
-                    //Math.floor(position_h * (0.7 * app.screen.height - 0.1 * app.screen.height)) + 0.1 * app.screen.height,
+                    //Math.floor(Math.random() * (0.9 * app.screen.width - 0.1 * app.screen.width)) + 0.1 * app.screen.width, //場所はランダム
+                    //Math.floor(Math.random() * (0.7 * app.screen.height - 0.1 * app.screen.height)) + 0.1 * app.screen.height,
+		    position_w , 
+                    position_h ,
                     data[i]["Date"]+"\n"+data[i]["Title"], //記事のタイトルをnameとして渡す
                     data[i]["URL"], //記事のリンクをurlとして渡す
                     data[i]["Hash"],
@@ -146,6 +151,12 @@
                     object_list,
 
                 );
+		position_w +=100;
+		f +=1;
+		if(f%4==0){
+		    position_h += 100;
+		}
+			
             }
 	    var duty = 1;
 	    app.ticker.add(function(delta)　{
