--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         let date = document.createElement('p');
         //年・月・日・曜日を書き出す
-        date.innerText = year + "年" + month + "月" + day + "日 " + week_ja[week] + "曜日";
+        date.innerText = year + "年" + month + "月" + day + "日 " + week_ja[week] + "曜日" + " | 類似度の高さ | 興味度高 シャチ > ナポレオンフィッシュ > タイ > クマノミ > ミジンコ 類似度低 | ";
         date.style.position = "absolute";
         document.body.append(date);
         
