position_hを中心基準に調整

--- a/index.html
+++ b/index.html
@@ -105,9 +105,12 @@
             console.log(data);
 
             var object_list = [];
-	    var position_w= Math.floor((app.screen.width)/8);
-	    var position_h=Math.floor(( app.screen.height)/6);
-	    var f=0;
+	        var position_w = Math.floor((app.screen.width)/8);
+	        // var position_h = Math.floor(( app.screen.height)/6);
+            var position_h_alpha = Math.floor((app.screen.height)/4)
+            var position_h = position_h_alpha;
+            var position_h_diff = Math.floor(((app.screen.height)/2)-position_h_alpha);
+	        var f=0;
 		
             for (let i = 0; i < data.length; i++) { //受け取ったデータでスプライトを作成
                 let texture = null;
@@ -139,7 +142,7 @@
                 var object_list = createFish( //魚を作成する関数を呼び出し
                     //Math.floor(Math.random() * (0.9 * app.screen.width - 0.1 * app.screen.width)) + 0.1 * app.screen.width, //場所はランダム
                     //Math.floor(Math.random() * (0.7 * app.screen.height - 0.1 * app.screen.height)) + 0.1 * app.screen.height,
-		    position_w , 
+		            position_w , 
                     position_h ,
                     data[i]["Date"]+"\n"+data[i]["Title"], //記事のタイトルをnameとして渡す
                     data[i]["URL"], //記事のリンクをurlとして渡す
@@ -151,25 +154,29 @@
                     object_list,
 
                 );
-		position_w +=Math.floor((app.screen.width)/4);
-		f +=1;
-		if(f%4==0){
-		    position_h +=Math.floor((app.screen.height)/3);
-		    position_w =Math.floor((app.screen.width)/8);
-		}
+		        
+                position_w += Math.floor((app.screen.width)/4);
+		        f +=1;
+
+		        if(f%4==0){
+		            //position_h += Math.floor((app.screen.height)/3);
+                    position_h += position_h_diff;
+		            position_w = Math.floor((app.screen.width)/8);
+		    }
 			
-            }
+        }
 	    var duty = 1;
+
 	    app.ticker.add(function(delta)　{
-		for(let i=0; i<object_list.length; i++) {
-		    if ( (3.14/8) <= object_list[i].rotation && object_list[i].rotation < (3.14/2)) {
-			    duty = -1;
-		    }
-		    if ( (-1 * 3.14)/2 <= object_list[i].rotation && object_list[i].rotation < (-1*3.14)/8 ) {
-			    duty = 1;
-		    }
-		    object_list[i].rotation += duty * 0.01;
+            for(let i=0; i<object_list.length; i++) {
+                if ( (3.14/8) <= object_list[i].rotation && object_list[i].rotation < (3.14/2)) {
+                    duty = -1;
                 }
+                if ( (-1 * 3.14)/2 <= object_list[i].rotation && object_list[i].rotation < (-1*3.14)/8 ) {
+                    duty = 1;
+                }
+                object_list[i].rotation += duty * 0.01;
+            }
 	    });
             setCookie(uid["UID"], data);
 
