--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
             var object_list = [];
 	        var position_w = Math.floor((app.screen.width)/8);
 	        // var position_h = Math.floor(( app.screen.height)/6);
-            var position_h_alpha = Math.floor((app.screen.height)/4)
-            var position_h = position_h_alpha;
-            var position_h_diff = Math.floor(((app.screen.height)/2)-position_h_alpha);
+            const position_center_diff = 100;
+            const position_h_alpha = Math.floor((app.screen.height)/4);
+
+            var position_h = position_h_alpha - position_center_diff;
+            var position_h_diff = Math.floor(((app.screen.height)/2)- position_h_alpha);
 	        var f=0;
 		
             for (let i = 0; i < data.length; i++) { //受け取ったデータでスプライトを作成
