--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         var week_ja = new Array("日", "月", "火", "水", "木", "金", "土");
 
-        let date = document.createElement('p');
+        let date = document.createElement('h2');
         //年・月・日・曜日を書き出す
         date.innerText = year + "年" + month + "月" + day + "日 " + "土" + "曜日" + " | 興味度の高さ シャチ > ナポレオンフィッシュ > タイ > クマノミ > ミジンコ | ";
         date.style.position = "absolute";
